created html and css files for contact page

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Interior Home</title>
+        <title>Contact the Interior</title>
         <link href="normalize.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:900|Open+Sans:300,400,600i" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="homeStyle.css" type="text/css" rel="stylesheet">
+        <link href="contactStyle.css" type="text/css" rel="stylesheet">
     </head>     
         
     <body>
@@ -111,140 +111,34 @@
         </section>
 
         <div class="bg"> <!-- bg class sets background -->
-            <section class="container-fluid" id="news">
-                <h2>Interior News</h2>
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="card" style="width: 100%;">
-                                        <img class="card-img-top" src="images/card1.jpg" alt="Card 1">
-                                        <div class="card-body">
-                                            <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="card" style="width: 100%;">
-                                        <img class="card-img-top" src="images/card2.jpg" alt="Card 2">
-                                        <div class="card-body">
-                                            <a href="#"><h5 class="card-title">10 Alternatives to Popular National...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="card" style="width: 100%;">
-                                        <img class="card-img-top" src="images/card3.jpg" alt="Card 3">
-                                        <div class="card-body">
-                                            <a href="#"><h5 class="card-title">Michigan’s Bird of Fire Rises from...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="card" style="width: 100%;">
-                                        <img class="card-img-top" src="images/card4.jpg" alt="Card 4">
-                                        <div class="card-body">
-                                            <a href="#"><h5 class="card-title">Interior Women Make More History<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="card" style="width: 100%;">
-                                        <img class="card-img-top" src="images/card5.jpg" alt="Card 5">
-                                        <div class="card-body">
-                                            <a href="#"><h5 class="card-title">Eureka! Rare Wildflower Pulled...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="card" style="width: 100%;">
-                                        <img class="card-img-top" src="images/card6.jpg" alt="Card 6">
-                                        <div class="card-body">
-                                            <a href="#"><h5 class="card-title">Secretary Zinke Announces More...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <h5><a href="#">More news...</a></h5>
-            </section>
-
-            <section class="container-fluid" id="subscribe">
+            <section class="container" id="contact">
                 <div class="row">
-                    <div class="col-lg-7">
-                        <h4 style="text-align: center;">Subscribe and stay up to date on all DOI news!</h4>
+                    <div class="col-lg-6">
+                        <ul class="list-group list-group-flush pad-5">
+                            <li class="list-group-item">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
                     </div>
-                    <div class="col-lg-5">
-                        <div class="form-row">
-                            <div class="col-10">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="Enter Your Email">
+                    <div class="col-lg-6">
+                        <form class="pad-5">
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Email address</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
-                            <div class="col-2">
-                                <button class="btn btn-success" type="submit">Submit</button>
+                            <div class="form-group">
+                              <label for="exampleInputPassword1">Password</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="container-fluid" id="middle">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <h2>Interior Blog</h2>
-                                <div class="card">
-                                    <img class="card-img-top" src="images/interior.jpg" alt="Card 1">
-                                    <div class="card-body">
-                                        <a href="#"><h5 class="card-title">Wild recipes from public lands across...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                    </div>
-                                </div>
+                            <div class="form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">I am not a robot</label>
                             </div>
-                            <div class="col-lg-6">    
-                                <h2>Travels with Zinke</h2>
-                                <div class="card">
-                                    <img class="card-img-top" src="images/zinke.jpg" alt="Card 1">
-                                    <div class="card-body">
-                                        <a href="#"><h5 class="card-title">Zinke in Florida<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row" id="connect">
-                            <div class="col-12">
-                                <h2 style="padding-bottom: 3%;">Connect with the Interior</h2>
-                            </div>
-                            <div class="col-lg-4">
-                                <span class="fa fa-users connectIcon"></span>
-                                <h4>Volunteer</h4>
-                            </div>
-                            <div class="col-lg-4">
-                                <span class="fa fa-graduation-cap connectIcon"></span>
-                                <h4>Students</h4>
-                            </div>
-                            <div class="col-lg-4">
-                                <span class="fa fa-building connectIcon"></span>
-                                <h4>Businesses</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <a class="twitter-timeline" data-height="100%" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">Tweets from the Interior</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
                     </div>
                 </div>
             </section>
