edited main content

--- a/contact.html
+++ b/contact.html
@@ -97,47 +97,72 @@
         </nav>
 
         <section class="jumbotron jumbotron-fluid" id="hero">
-            <div class="container-fluid full">
-                <div class="row align-items-end full">
-                    <div class="col" id="heroCaption">
-                        <h2>
-                            <a class="plainLink white" href="#">
-                                Twinkle, twinkle! 16 Awesome Public Lands for Stargazing<span class="fa fa-chevron-right followIcon align-middle" title="chevron-right" aria-hidden="true"></span>
-                            </a>
-                        </h2>
-                    </div>
-                </div> 
+            <div class="container-fluid full"></div>
+        </section>
+
+        <section class="container-fluid" id="pageTitle">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Contact the Interior</h2>
+                    <h4>Questions or concerns? Here’s how you can reach us</h4>
+                </div>
             </div>
         </section>
 
         <div class="bg"> <!-- bg class sets background -->
-            <section class="container" id="contact">
+            <section class="container-fluid pad-5" id="contact">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="list-group list-group-flush pad-5">
-                            <li class="list-group-item">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
+                    <div class="col-lg-6" style="padding: 0 5%">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <h5><i class="fas fa-map-marker-alt"></i> Department of the Interior
+                                <br>1849 C Street, N.W.
+                                <br>Washington DC 20240
+                                </h5>
+                            </li>
+                            <li class="list-group-item"><h5><i class="fas fa-envelope"></i> feedback@jos.doi.gov</h5></li>
+                            <li class="list-group-item"><h5><i class="fas fa-phone"></i> (202) 208-3100</h5></li>
                         </ul>
+                        <div class="row">
+                            <div class="col-12">
+                                <h5 style="padding: 2% 0;">Follow the Interior</h5>
+                            </div>
+                            <div class="col-2"></div>
+                            <div class="col-2">
+                                <i class="fab fa-facebook-square"></i>
+                            </div>
+                            <div class="col-2">
+                                <i class="fab fa-instagram"></i>
+                            </div>
+                            <div class="col-2">
+                                <i class="fab fa-twitter-square"></i>
+                            </div>
+                            <div class="col-2">
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                            <div class="col-2"></div>
+                        </div>
                     </div>
-                    <div class="col-lg-6">
-                        <form class="pad-5">
+                    <div class="col-lg-6" style="padding: 0 5%"> <!--contact form -->
+                        <form>
                             <div class="form-group">
-                              <label for="exampleInputEmail1">Email address</label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
                             <div class="form-group">
-                              <label for="exampleInputPassword1">Password</label>
-                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Comments</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Enter your message" rows="4"></textarea>
                             </div>
                             <div class="form-check">
                               <input type="checkbox" class="form-check-input" id="exampleCheck1">
                               <label class="form-check-label" for="exampleCheck1">I am not a robot</label>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-success">Submit</button>
                         </form>
                     </div>
                 </div>
