--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                     </div>
                     <div class="col-lg-2">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h5>Contact Us</h5></li>
-                            <li class="list-group-item"><a href="#"> feedback@jos.doi.gov</a></li>
+                            <li class="list-group-item"><h5><a href="contact.html">Contact Us</a></h5></li>
+                            <li class="list-group-item"><a href="#">feedback@jos.doi.gov</a></li>
                             <li class="list-group-item"><a href="#">1849 C Street, N.W.<br>Washington DC 20240</a></li>
                         </ul>
                     </div>
