first draft of finished pages, added images

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                             <p>About</p>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">sup-page</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">sup-page</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">sup-page</a>
                         </div>
                     </div>
                     <!--departments link-->
@@ -53,11 +53,11 @@
                             <p>Departments</p>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">sup-page</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">sup-page</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">sup-page</a>
                         </div>
                     </div>
                     <!--priorities link-->
@@ -100,9 +100,9 @@
                         </div>
                     </div>
                 </div>
-                <form class="form-inline my-2 my-lg-0" style="padding-left: 3%;">
+                <form class="form-inline my-2 my-lg-0" action="search.html" style="padding-left: 3%;">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
         </nav>
@@ -270,7 +270,7 @@
                         </li>
                         <li class="page-item"><a class="page-link" href="search.html">2</a></li>
                         <li class="page-item"><a class="page-link" href="contact.html">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="gallery.html">4</a></li>
                         <li class="page-item">
                             <a class="page-link" href="search.html">Next</a>
                         </li>
