--- a/contact.html
+++ b/contact.html
@@ -101,9 +101,9 @@
                         </div>
                     </div>
                 </div>
-                <form class="form-inline my-2 my-lg-0" style="padding-left: 3%;">
+                <form class="form-inline my-2 my-lg-0" action="search.html" style="padding-left: 3%;">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
         </nav>
@@ -142,16 +142,16 @@
                                 </div>
                                 <div class="col-2"></div>
                                 <div class="col-2">
-                                    <a href="https://www.facebook.com/USInterior"><i class="fab fa-facebook-square" style="font-size: 3em;"></i></a>
+                                    <a href="https://www.facebook.com/USInterior"><i class="fab fa-facebook-square" style="font-size: 3em;" data-toggle="tooltip" title="DOI Facebook"></i></a>
                                 </div>
                                 <div class="col-2">
-                                    <a href="https://www.instagram.com/usinterior"><i class="fab fa-instagram" style="font-size: 3em;"></i></a>
+                                    <a href="https://www.instagram.com/usinterior"><i class="fab fa-instagram" style="font-size: 3em;" data-toggle="tooltip" title="DOI Instagram"></i></a>
                                 </div>
                                 <div class="col-2">
-                                    <a href="https://twitter.com/Interior"><i class="fab fa-twitter-square" style="font-size: 3em;"></i></a>
+                                    <a href="https://twitter.com/Interior"><i class="fab fa-twitter-square" style="font-size: 3em;" data-toggle="tooltip" title="DOI Twitter"></i></a>
                                 </div>
                                 <div class="col-2">
-                                    <a href="https://www.youtube.com/user/USInterior"><i class="fab fa-youtube" style="font-size: 3em;"></i></a>
+                                    <a href="https://www.youtube.com/user/USInterior"><i class="fab fa-youtube" style="font-size: 3em;" data-toggle="tooltip" title="DOI Youtube"></i></a>
                                 </div>
                                 <div class="col-2"></div>
                             </div>
@@ -195,9 +195,9 @@
                                 <span class="sr-only">(current)</span>
                             </span>
                         </li>
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="gallery.html">4</a></li>
                         <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
+                            <a class="page-link" href="gallery.html">Next</a>
                         </li>
                     </ul>
                 </nav>
