--- a/search.html
+++ b/search.html
@@ -101,9 +101,9 @@
                         </div>
                     </div>
                 </div>
-                <form class="form-inline my-2 my-lg-0" style="padding-left: 3%;">
+                <form class="form-inline my-2 my-lg-0" action="search.html" style="padding-left: 3%;">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
         </nav>
@@ -172,15 +172,13 @@
                         </span>
                     </li>
                     <li class="page-item"><a class="page-link" href="contact.html">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="gallery.html">4</a></li>
                     <li class="page-item">
                         <a class="page-link" href="contact.html">Next</a>
                     </li>
                 </ul>
             </nav>
         </section>
-    
-        
 
             <section class="container-fluid" id="footer">
                 <div class="row">
